# opencv-lab

./: .gitignore  CMakeLists.txt  README.md  clean.sh
data/: contour_standard.json
prj.labs/: CMakeLists.txt
prj.labs/lab01/: CMakeLists.txt  lab01.cpp  lab01.report.md.in.txt
prj.labs/lab02/: lab02.cpp  lab02.report.md.in.txt
prj.labs/lab03/: lab03.cpp  lab03.report.md.in.txt
prj.labs/lab04/: CMakeLists.txt  lab04.cpp  lab04.report.md.in.txt
prj.labs/lab05/: CMakeLists.txt  lab05.cpp  lab05.report.md.in.txt
prj.labs/lab06/: CMakeLists.txt  lab06.cpp  lab06.report.md.in.txt
prj.labs/lab07/: CMakeLists.txt  lab07.report.md.in.txt
prj.labs/lab0k/: CMakeLists.txt  lab0k.cpp  lab0k.report.md.in.txt
utils/: CMakeLists.txt  utils.cpp
